[tool.poetry]
name = "rnnms"
version = "0.2.0"
description = "Reimplementation of RNN_MS with PyTorch"
authors = ["Tarepan"]
readme = "README.md"
repository = "https://github.com/tarepan/UniversalVocoding"

[tool.poetry.dependencies]
python = "^3.6.1"
torch = "*"
torchaudio = "^0.7.0"
pytorch-lightning = "^1.1.3"
fsspec = {extras = ["http", "s3"], version = "^0.8.4"}
boto3 = "^1.16.18"
numpy = "^1.16"
scipy = "^1.2"
librosa = "0.6.3"
tqdm = "*"
corpuspy = {git = "https://github.com/tarepan/corpuspy.git", rev = "main"}
pyloudnorm = "^0.1.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"