[tool.poetry]
name = "rnnms"
version = "0.2.0"
description = "Reimplementation of RNN_MS with PyTorch"
authors = ["Tarepan"]
readme = "README.md"
repository = "https://github.com/tarepan/UniversalVocoding"

[tool.poetry.dependencies]
python = "^3.7"
torch = "*"
torchaudio = "^0.9.0"
pytorch-lightning = "^1.4.9"
fsspec = {extras = ["http", "s3"], version = "^0.8.4"}
boto3 = "^1.16.18"
numpy = "^1.16"
corpuspy = {git = "https://github.com/tarepan/corpuspy.git", rev = "main"}
pyloudnorm = "^0.1.0"
librosa = "^0.8.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
